Arquivo inserido em produto na busca e permissão crossorigin